# Claude-Code

./: .env.example  .gitignore  CLAUDE.md  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  deploy-pages.yml
site/: archive.html  feed.xml  index.html
site/articles/2026-04-16/: ai規制法が国会通過へ-私たちの生活はどう変わる3つのポイント.html  円安が再び150円台に-家計への影響と今後の見通しをサクッと解説.html  新型iphone-17の全貌が判明リーク情報5つのポイントまとめ.html
site/assets/: style.css
site/data/: articles.json
src/matome/: __init__.py  cli.py  config.py  models.py  pipeline.py  publisher.py  summarizer.py
src/matome/research/: __init__.py  fetcher.py  news_rss.py
src/matome/trends/: __init__.py  aggregator.py  base.py  google_trends.py  yahoo_realtime.py
templates/: archive.html  article.html  base.html  index.html
tests/: test_pipeline.py  test_research.py  test_trends.py
